# sz-finances

./: .env.example  .env.test  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  docker-compose.yaml  docker-compose.yml  entrypoint.sh  requirements.txt
backend/app/: main.py
backend/app/analytics/: analytics_calc.py  models.py  portfolio_snapshot.py  sector_distribution.py
backend/app/api/: dependencies.py  deps.py
backend/app/contracts/: repos.py
backend/app/core/: config.py  database.py  logging.py  middleware.py  redis.py  security.py
backend/app/infrastructure/: db.py  redis.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: __init__.py  analytics.py  asset.py  asset_price.py  asset_prices.py  dependencies.py  portfolio.py  portfolio_positions.py  refresh_session.py  trade.py  user.py
backend/app/routers/: portfolio_positions.py  users.py
backend/app/schemas/: analytics.py  asset.py  asset_price.py  auth.py  portfolio.py  portfolio_position.py  trade.py  user.py
backend/app/services/: __init__.py  analytics.py  assets.py  auth.py  dependencies.py  portfolio_positions.py  portfolios.py  trades.py  users.py
backend/app/ws/: manager.py  redis_listener.py  routes.py
backend/migrations/: env.py
backend/migrations/versions/: 3bb7dd94cc28_numeric.py  5cd64968836b_add_role_user.py  835d78d3b012_add_column_currency_into_portfolio.py  a48bd92841ec_init.py  (+2 more)
backend/price_updater/: config.py  main.py
backend/shared/models/: asset.py  (+5 more)
(+46 files in other folders)
